--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "keywords": ["yeoman-generator", "crowdtap", "angular"],
   "dependencies": {
     "yeoman-generator": "^0.17.0",
-    "underscore.string": "2.3.3"
+    "underscore.string": "2.3.3",
+    "chalk": "0.4.0"
   },
   "contributors": [
     { "name" : "Maulin Pathare",
