--- a/generators/app/templates/_circle.yml
+++ b/generators/app/templates/_circle.yml
@@ -13,4 +13,4 @@ deployment:
   production:
     branch: master
     commands:
-      - curl -H 'API-KEY' -XPOST http://deployer.crowdtap.com/deploys/$CIRCLE_PROJECT_REPONAME/production/$CIRCLE_SHA1
+      - curl -H 'x-api-key:20dca2067c57c415fd797184715b1b' -XPOST http://deployer.crowdtap.com/deploys/$CIRCLE_PROJECT_REPONAME/production/$CIRCLE_SHA1
