--- a/generators/app/templates/_circle.yml
+++ b/generators/app/templates/_circle.yml
@@ -2,6 +2,11 @@ general:
   branches:
     ignore:
       - production
+dependencies:
+  cache_directories:
+    - firefox
+  pre:
+    - bash ./install-firefox-30.sh
 machine:
   timezone:
     America/New_York
@@ -13,4 +18,4 @@ deployment:
   production:
     branch: master
     commands:
-      - curl -H 'x-api-key:20dca2067c57c415fd797184715b1b' -XPOST http://deployer.crowdtap.com/deploys/$CIRCLE_PROJECT_REPONAME/production/$CIRCLE_SHA1
+      - curl -XPOST http://deploy:20dca2067c57c415fd797184715b1b@deployer.crowdtap.us/deploys/$CIRCLE_PROJECT_REPONAME/production/$CIRCLE_SHA1
