Fix firefox install script and rename it

--- a/generators/app/templates/_circle.yml
+++ b/generators/app/templates/_circle.yml
@@ -6,7 +6,7 @@ dependencies:
   cache_directories:
     - firefox
   pre:
-    - bash ./install-firefox-30.sh
+    - bash ./install-firefox.sh
 machine:
   timezone:
     America/New_York
